--- a/src/components/file-browser-list/file-browser-list.scss
+++ b/src/components/file-browser-list/file-browser-list.scss
@@ -1,5 +1,6 @@
 .file-browser-list {
 	height: 100%;
+	overflow-y: auto;
 }
 
 .list-item {
